welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value T
	T=tableaucouleur()
        ^Array1:24: error: class Array takes type parameters
def peindre(T:Array){
              ^Array1:8: error: not found: value T
    peindre(T)
            ^Array1:11: error: not found: type int
def tableaucouleur():Array[int] = {
                           ^Array1:24: error: class Array takes type parameters
def peindre(T:Array){
              ^